--- a/Languages/English/DefInjected/ThingDef/Buildings_Rugs.xml
+++ b/Languages/English/DefInjected/ThingDef/Buildings_Rugs.xml
@@ -19,6 +19,9 @@
   <TrumbCarpet.label>Carpet from Trumbo</TrumbCarpet.label>
   <TrumbCarpet.description>A great creature that ended up in the wrong colony, now its fur adorns the colony</TrumbCarpet.description>
 
+  <InsectCarpet.label>Carpet from Insect</InsectCarpet.label>
+  <InsectCarpet.description>The corpse of the beetle queen, many colonies died from her children, her dead eyes continue to radiate malice, even after death</InsectCarpet.description>
+
 
   <!--<InsectCarpet.label>Carpet from Insect</InsectCarpet.label>-->
   <!--<InsectCarpet.description>A great creature that ended up in the wrong colony, now its fur adorns the colony</InsectCarpet.description>-->
