--- a/Languages/English/DefInjected/ThingDef/Items_Fluffy.xml
+++ b/Languages/English/DefInjected/ThingDef/Items_Fluffy.xml
@@ -19,6 +19,9 @@
   <FeenixHead.label>Phoenix head</FeenixHead.label>
   <FeenixHead.description>An incredible trophy in the form of the severed head of a fiery dragon. Touching the scales gives rise to thoughts of lava rivers. The glassy eyes are creepy even after the death of the giant.</FeenixHead.description>
 
+  <InsectHead.label>Queen bug head</InsectHead.label>
+  <InsectHead.description>Head of the queen beetle, a nasty but valuable trophy.</InsectHead.description>
+
   <LivingSun.label>Heart of baguest</LivingSun.label>
   <LivingSun.description>The living heart of the creature of darkness that contains sparks of light.</LivingSun.description>
 
