--- a/Languages/English/DefInjected/ThingDef/Buildings_Production.xml
+++ b/Languages/English/DefInjected/ThingDef/Buildings_Production.xml
@@ -3,8 +3,8 @@
 
   <!-- Drying Rack -->
 
-  <industrialDryingRack.label> industrial drying rack</industrialDryingRack.label>
-  <industrialDryingRack.description>The dryer (industrial) is designed for drying berries, meat, mushrooms, fish..</industrialDryingRack.description>
+  <industrialDryingRack.label>Industrial drying rack</industrialDryingRack.label>
+  <industrialDryingRack.description>The dryer (industrial) is designed for drying berries, meat, mushrooms, fish.</industrialDryingRack.description>
 
 
 </LanguageData>
