--- a/Languages/Russian/DefInjected/HediffDef/HediffDefs_PSY.xml
+++ b/Languages/Russian/DefInjected/HediffDef/HediffDefs_PSY.xml
@@ -5,9 +5,9 @@
   <PSY_Bright.description>Гармонические вибрации пси-волн, которые излучает сердце, ускоряют восстановление вашей энергии.</PSY_Bright.description>
   <PSY_Bright.labelNoun>Пси Резонанс</PSY_Bright.labelNoun>
 
-  <Carpet_Bite.label>Странный укус</Carpet_Bite.label>
-  <Carpet_Bite.description>Меня что, укусил ковер? Нет, но лучше ускориться.</Carpet_Bite.description>
-  <Carpet_Bite.labelNoun>Странный укус</Carpet_Bite.labelNoun>
 
+  <!--<Carpet_Bite.label>Странный укус</Carpet_Bite.label>-->
+  <!--<Carpet_Bite.description>Меня что, укусил ковер? Нет, но лучше ускориться.</Carpet_Bite.description>-->
+  <!--<Carpet_Bite.labelNoun>Странный укус</Carpet_Bite.labelNoun>-->
 
 </LanguageData>
