--- a/Languages/Russian/DefInjected/XmlExtensions.SettingsMenuDef/Settings_main.xml
+++ b/Languages/Russian/DefInjected/XmlExtensions.SettingsMenuDef/Settings_main.xml
@@ -16,7 +16,9 @@
   <Watcher_Content_Settings.settings.16.label>Отключаем рост растений вокруг лампы лекаря?</Watcher_Content_Settings.settings.16.label>
   <Watcher_Content_Settings.settings.18.label>Добавляем жуков бомбардиров в коконы жуков?</Watcher_Content_Settings.settings.18.label>
   <Watcher_Content_Settings.settings.19.label>Добавляем жуков бомбардиров и королеву в рейды жуков?</Watcher_Content_Settings.settings.19.label>
-  <Watcher_Content_Settings.settings.23.text>Для применения всех параметров требуется перезагрузка</Watcher_Content_Settings.settings.23.text>
+  <Watcher_Content_Settings.settings.21.label>Заменяем вооружение механоида "Испепелителя" на усиленный огнемёт?</Watcher_Content_Settings.settings.21.label>
+  <Watcher_Content_Settings.settings.22.label>Добавляем пересадку органов и импланты для андроидов?</Watcher_Content_Settings.settings.22.label>
+  <Watcher_Content_Settings.settings.26.text>Для применения всех параметров требуется перезагрузка</Watcher_Content_Settings.settings.26.text>
 
 
 </LanguageData>
