--- a/Languages/Russian/DefInjected/RecipeDef/Recipes_UniversalFermenter.xml
+++ b/Languages/Russian/DefInjected/RecipeDef/Recipes_UniversalFermenter.xml
@@ -50,7 +50,7 @@
   <Make_Jerkyx30.description>Сделайте вяленое мясо. Изготовление занимает 2 дня</Make_Jerkyx30.description>
 
   <Make_DriedFruit_x05.label>Высушить сухофрукты x5</Make_DriedFruit_x05.label>
-  <Make_DriedFruit_x05.description>Make dried fruit x5. Takes 2 days to make</Make_DriedFruit_x05.description>
+  <Make_DriedFruit_x05.description>Сделайте сухофрукты x5. Изготовление занимает 2 дня</Make_DriedFruit_x05.description>
 
   <Make_DriedFruit_x10.label>Высушить сухофрукты x10</Make_DriedFruit_x10.label>
   <Make_DriedFruit_x10.description>Сделайте сухофрукты x10. Изготовление занимает 2 дня</Make_DriedFruit_x10.description>
