--- a/Languages/Russian/DefInjected/ThingCategoryDef/Flamethrower.xml
+++ b/Languages/Russian/DefInjected/ThingCategoryDef/Flamethrower.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <AmmoFlamethrower.label>flamethrower fuel</AmmoFlamethrower.label>
+  <AmmoFlamethrower.label>огнесмесь</AmmoFlamethrower.label>
 
 
 </LanguageData>
