--- a/Languages/Russian/DefInjected/ThingDef/Acid.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Acid.xml
@@ -7,13 +7,13 @@
   <Ammo_Acid.description>Кислота производимая особыми видами жуков.</Ammo_Acid.description>
 
   <Ammo_Cocon.label>Почти созревший кокон</Ammo_Cocon.label>
-  <Ammo_Cocon.description>кокон.</Ammo_Cocon.description>
+  <Ammo_Cocon.description>Кокон.</Ammo_Cocon.description>
 
 
   <!-- Projectiles -->
 
-  <Bullet_Acid.label>кислотный снаряд</Bullet_Acid.label>
-  <Bullet_Cocon.label>кокон</Bullet_Cocon.label>
+  <Bullet_Acid.label>Кислотный снаряд</Bullet_Acid.label>
+  <Bullet_Cocon.label>Кокон</Bullet_Cocon.label>
 
 
 </LanguageData>
