--- a/Languages/Russian/DefInjected/HediffDef/HediffDefs_PSY.xml
+++ b/Languages/Russian/DefInjected/HediffDef/HediffDefs_PSY.xml
@@ -5,6 +5,10 @@
   <PSY_Bright.description>Гармонические вибрации пси-волн, которые излучает сердце, ускоряют восстановление вашей энергии.</PSY_Bright.description>
   <PSY_Bright.labelNoun>Пси Резонанс</PSY_Bright.labelNoun>
 
+  <PSY_noise.label>Пси Гул</PSY_noise.label>
+  <PSY_noise.description>Отвратительный жужжащий шум мешает мне сосредоточиться.Ужасные видения возникают в голове.В голове пульсирует мысль - Мы идём - мы голодны.</PSY_noise.description>
+  <PSY_noise.labelNoun>Пси Гул</PSY_noise.labelNoun>
+
 
   <!--<Carpet_Bite.label>Странный укус</Carpet_Bite.label>-->
   <!--<Carpet_Bite.description>Меня что, укусил ковер? Нет, но лучше ускориться.</Carpet_Bite.description>-->
