--- a/Languages/Russian/DefInjected/ThingDef/Napalm_Fuel.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Napalm_Fuel.xml
@@ -3,8 +3,8 @@
 
   <!-- Fluids etc -->
 
-  <Napalm_Fuel.label>напалмовая лужа</Napalm_Fuel.label>
-  <Napalm_Fuel.description>Лужа топлива.</Napalm_Fuel.description>
+  <!--<Napalm_Fuel.label>напалмовая лужа</Napalm_Fuel.label>-->
+  <!--<Napalm_Fuel.description>Лужа топлива.</Napalm_Fuel.description>-->
 
 
 </LanguageData>
