--- a/Languages/Russian/DefInjected/HediffDef/HediffDefs_PSY.xml
+++ b/Languages/Russian/DefInjected/HediffDef/HediffDefs_PSY.xml
@@ -6,12 +6,12 @@
   <PSY_Bright.labelNoun>Пси Резонанс</PSY_Bright.labelNoun>
 
   <PSY_noise.label>Пси Гул</PSY_noise.label>
-  <PSY_noise.description>Отвратительный жужжащий шум мешает мне сосредоточиться.Ужасные видения возникают в голове.В голове пульсирует мысль - Мы идём - мы голодны.</PSY_noise.description>
+  <PSY_noise.description>Отвратительный жужжащий шум что мешает сосредоточиться.В голове пульсирует мысль - Мы идём - мы голодны.</PSY_noise.description>
   <PSY_noise.labelNoun>Пси Гул</PSY_noise.labelNoun>
 
 
-  <!--<Carpet_Bite.label>Странный укус</Carpet_Bite.label>-->
-  <!--<Carpet_Bite.description>Меня что, укусил ковер? Нет, но лучше ускориться.</Carpet_Bite.description>-->
-  <!--<Carpet_Bite.labelNoun>Странный укус</Carpet_Bite.labelNoun>-->
+ <Carpet_Bite.label>Странный укус</Carpet_Bite.label>
+  <Carpet_Bite.description>Меня что, укусил ковер? Нет, но лучше ускориться.</Carpet_Bite.description>
+ <Carpet_Bite.labelNoun>Странный укус</Carpet_Bite.labelNoun>
 
 </LanguageData>
