--- a/Languages/Russian/DefInjected/ThingDef/Races_Animal_Exotic.xml
+++ b/Languages/Russian/DefInjected/ThingDef/Races_Animal_Exotic.xml
@@ -15,7 +15,7 @@
 
   <QueenBug.label>Королева Жуков</QueenBug.label>
   <QueenBug.description>Редкий представитель инсектоидов, ходят легенды, что разрушенные поселения, полные жуков, — дело лап Мясной Зины.</QueenBug.description>
-  <QueenBug.verbs.0.label>launch Cocon</QueenBug.verbs.0.label>
+  <QueenBug.verbs.0.label>Кислотная железа</QueenBug.verbs.0.label>
   <QueenBug.tools.0.label>Левая передняя нога</QueenBug.tools.0.label>
   <QueenBug.tools.1.label>Правая передняя нога</QueenBug.tools.1.label>
   <QueenBug.tools.3.label>Жвалы</QueenBug.tools.3.label>
