--- a/Languages/Russian/DefInjected/HediffDef/HediffDefs_PSY.xml
+++ b/Languages/Russian/DefInjected/HediffDef/HediffDefs_PSY.xml
@@ -10,8 +10,8 @@
   <PSY_noise.labelNoun>Пси Гул</PSY_noise.labelNoun>
 
 
- <Carpet_Bite.label>Странный укус</Carpet_Bite.label>
-  <Carpet_Bite.description>Меня что, укусил ковер? Нет, но лучше ускориться.</Carpet_Bite.description>
- <Carpet_Bite.labelNoun>Странный укус</Carpet_Bite.labelNoun>
+  <!--<Carpet_Bite.label>Странный укус</Carpet_Bite.label>-->
+  <!--<Carpet_Bite.description>Меня что, укусил ковер? Нет, но лучше ускориться.</Carpet_Bite.description>-->
+  <!--<Carpet_Bite.labelNoun>Странный укус</Carpet_Bite.labelNoun>-->
 
 </LanguageData>
