--- a/Languages/Russian/DefInjected/RecipeDef/Recipes_UniversalFermenter.xml
+++ b/Languages/Russian/DefInjected/RecipeDef/Recipes_UniversalFermenter.xml
@@ -56,4 +56,13 @@
   <Make_DriedFruit_x10.description>Сделайте сухофрукты x10. Изготовление занимает 2 дня</Make_DriedFruit_x10.description>
 
 
+ <Make_Puer.label>Высушить чай Пуэр</Make_Puer.label>
+ <Make_Puer.description>Главной отличительной чертой пуэров является стадия ферментации, которая может занимать различное время. Участвующие в ней микроорганизмы заметно меняют химический состав и вкусовые качества чая.</Make_Puer.description>
+ <Make_Puer_x5.label>Высушить чай Пуэр x5</Make_Puer_x5.label>
+ <Make_Puer_x5.description>Главной отличительной чертой пуэров является стадия ферментации, которая может занимать различное время. Участвующие в ней микроорганизмы заметно меняют химический состав и вкусовые качества чая.</Make_Puer_x5.description>
+ <Make_GreenTea.label>Высушить зелёный чай</Make_GreenTea.label>
+ <Make_GreenTea.description>Зеленый чай — это напиток из листьев чайной камелии. Собственно, как и черный чай. Основное их различие в том, что для зеленого чая процесс ферментации минимален, отчего он становится ближе к живому чайному листу. И чем сильнее чай ферментирован, тем темнее его настой и ярче вкус.</Make_GreenTea.description>
+ <Make_GreenTea_x5.label>Высушить зелёный чай x5</Make_GreenTea_x5.label>
+ <Make_GreenTea_x5.description>Зеленый чай — это напиток из листьев чайной камелии. Собственно, как и черный чай. Основное их различие в том, что для зеленого чая процесс ферментации минимален, отчего он становится ближе к живому чайному листу. И чем сильнее чай ферментирован, тем темнее его настой и ярче вкус.</Make_GreenTea_x5.description>
+
 </LanguageData>
