--- a/Languages/English/DefInjected/ThingDef/Napalm_Fuel.xml
+++ b/Languages/English/DefInjected/ThingDef/Napalm_Fuel.xml
@@ -3,8 +3,8 @@
 
   <!-- Fluids etc -->
 
-  <Napalm_Fuel.label>napalm puddle</Napalm_Fuel.label>
-  <Napalm_Fuel.description>Burns on the ground.</Napalm_Fuel.description>
+  <!--<Napalm_Fuel.label>napalm puddle</Napalm_Fuel.label>-->
+  <!--<Napalm_Fuel.description>Burns on the ground.</Napalm_Fuel.description>-->
 
 
 </LanguageData>
