--- a/Languages/Russian/DefInjected/XmlExtensions.SettingsMenuDef/Settings_main.xml
+++ b/Languages/Russian/DefInjected/XmlExtensions.SettingsMenuDef/Settings_main.xml
@@ -19,9 +19,7 @@
   <Watcher_Content_Settings.settings.21.label>Заменяем вооружение механоида "Испепелителя" на усиленный огнемёт?</Watcher_Content_Settings.settings.21.label>
   <Watcher_Content_Settings.settings.22.label>Добавляем пересадку органов и импланты для андроидов?</Watcher_Content_Settings.settings.22.label>
   <Watcher_Content_Settings.settings.23.label>Добавление радиоактивного излучения вокруг РИТЭГа?</Watcher_Content_Settings.settings.23.label>
-  <Watcher_Content_Settings.settings.27.text>Для применения всех параметров требуется перезагрузка</Watcher_Content_Settings.settings.27.text>
-
-
-  
+  <Watcher_Content_Settings.settings.24.label>Добавляет разнообразие в чайную продукцию(По рецептам Деда)?</Watcher_Content_Settings.settings.24.label>
+  <Watcher_Content_Settings.settings.28.text>Для применения всех параметров требуется перезагрузка</Watcher_Content_Settings.settings.28.text>
 
 </LanguageData>
